--- a/style.css
+++ b/style.css
@@ -6,16 +6,9 @@ nav > div {
 }
 
 .overlay {
-	/* Sit on top of the page content */
-	/* Hidden by default */
 	width: 100%;
-	/* Full width (cover the whole page) */
 	height: 100%;
-	/* Full height (cover the whole page) */
 	background: rgba(0, 0, 0, 0.452);
-	/* Black background with opacity */
-	/* Specify a stack order in case you're using a different order for other elements */
-	/* Add a pointer on hover */
 }
 
 .hero {
@@ -46,18 +39,200 @@ nav > div {
 	margin-top: -200px;
 }
 
+.hr {
+	border: 1px solid rgba(0, 0, 255, 0.089);
+	width: 100wh;
+}
+
 .news-title {
 	font-family: "Oswald", sans-serif;
 	/* border: 1px solid black;
 	border-radius: 25px; */
 }
-.news > div > img {
+
+.news {
+	box-shadow: 3px 6px 8px rgba(0, 0, 0, 0.288);
+}
+
+.media > img {
+	padding-bottom: 5px;
 	width: 20%;
 	height: 20%;
 }
-.media > img {
-	width: 10%;
-	height: 10%;
+
+.activity {
+	background: #f6f3f3;
+	box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.288);
+}
+
+.activities {
+	border: 1px solid rgba(0, 0, 0, 0.418);
+	border-radius: 10px;
+	padding: 20px;
+	box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.719);
+}
+
+.activities > p {
+	border-top: 1px solid rgb(16, 16, 151);
+	padding-top: 30px;
+	font-size: 20px;
+	color: rgb(16, 16, 151);
+	font-weight: 300;
+	font-family: "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.activity-date {
+	padding-top: 10px;
+	padding-left: 0px;
+}
+
+.activity-date-month,
+.activity-date-day {
+	letter-spacing: 5px;
+	line-height: 1px;
+}
+
+.activity-date-day {
+	letter-spacing: 5px;
+	line-height: 1px;
+}
+
+.activity-detail-name {
+	font-size: 21px;
+	font-weight: bold;
+}
+
+.footer {
+	font-family: "Oswald", sans-serif;
+	margin-left: 30px;
+	margin-right: 30px;
+	padding-right: 20px;
+	padding-left: 20px;
+}
+
+.footer > li {
+	font-size: 15;
+}
+.footer-image {
+	height: 25%;
+	width: 25%;
+}
+
+ul {
+	list-style: none;
+}
+footer {
+	background: #16222a;
+	background: -webkit-linear-gradient(59deg, #3a6073, #16222a);
+	background: linear-gradient(59deg, #3a6073, #16222a);
+	/* font-family: "Montserrat", sans-serif; */
+	font-family: "Oswald", sans-serif;
+
+	color: white;
+	margin-top: 100px;
+}
+
+footer a {
+	color: #fff;
+	font-size: 14px;
+	transition-duration: 0.2s;
+}
+
+footer a:hover {
+	color: #fa944b;
+	text-decoration: none;
+}
+
+.copy {
+	font-size: 12px;
+	padding: 10px;
+	border-top: 1px solid #ffffff;
+}
+
+.footer-middle {
+	padding-top: 2em;
+	color: white;
+}
+
+/*SOCİAL İCONS*/
+
+/* footer social icons */
+
+ul.social-network {
+	list-style: none;
+	display: inline;
+	margin-left: 0 !important;
+	padding: 0;
+}
+
+ul.social-network li {
+	display: inline;
+	margin: 0 5px;
+}
+
+/* footer social icons */
+
+.social-network a.icoFacebook:hover {
+	background-color: #3b5998;
+}
+
+.social-network a.icoLinkedin:hover {
+	background-color: #007bb7;
+}
+
+.social-network a.icoFacebook:hover i,
+.social-network a.icoLinkedin:hover i {
+	color: #fff;
+}
+
+.social-network a.socialIcon:hover,
+.socialHoverClass {
+	color: #44bcdd;
+}
+
+.social-circle li a {
+	display: inline-block;
+	position: relative;
+	margin: 0 auto 0 auto;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+	border-radius: 50%;
+	text-align: center;
+	width: 30px;
+	height: 30px;
+	font-size: 15px;
+}
+
+.social-circle li i {
+	margin: 0;
+	line-height: 30px;
+	text-align: center;
+}
+
+.social-circle li a:hover i,
+.triggeredHover {
+	-moz-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-ms--transform: rotate(360deg);
+	transform: rotate(360deg);
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	-ms-transition: all 0.2s;
+	transition: all 0.2s;
+}
+
+.social-circle i {
+	color: #595959;
+	-webkit-transition: all 0.8s;
+	-moz-transition: all 0.8s;
+	-o-transition: all 0.8s;
+	-ms-transition: all 0.8s;
+	transition: all 0.8s;
+}
+
+.social-network a {
+	background-color: #f9f9f9;
 }
 @media screen and (max-width: 600px) {
 	.box {
@@ -67,5 +242,9 @@ nav > div {
 	.boxes {
 		margin-top: -100px;
 		/* margin-bottom: 500px; */
+	}
+
+	.activity-detail-name {
+		font-size: 18px;
 	}
 }
