--- a/style.css
+++ b/style.css
@@ -235,16 +235,39 @@ ul.social-network li {
 	background-color: #f9f9f9;
 }
 @media screen and (max-width: 600px) {
+	.overlay > img {
+		width: 40%;
+	}
 	.box {
 		width: 100%;
+		height: 15vh;
+		font-size: 22px;
 	}
 
 	.boxes {
-		margin-top: -100px;
+		margin-top: -50px;
 		/* margin-bottom: 500px; */
 	}
 
 	.activity-detail-name {
 		font-size: 18px;
 	}
+}
+@media screen and (max-width: 480px) {
+	.boxes {
+		margin-top: -30px;
+	}
+	.overlay {
+		font-size: 15px;
+	}
+}
+
+/* about page */
+
+.hero-about {
+	background-image: url("https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+	background-size: cover;
+	background-position: center;
+	width: 100wh;
+	height: 35vh;
 }
