Tüzük,logo,animasyon

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=latin-ext,vietnamese");
+
 nav > div {
 	font-family: "Oswald", sans-serif;
 	font-weight: bold;
@@ -8,7 +10,7 @@ nav > div {
 .overlay {
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.452);
+	background: rgba(0, 0, 0, 0.623);
 }
 
 .hero {
@@ -20,7 +22,6 @@ nav > div {
 }
 
 .box {
-	background: rgb(19, 19, 0);
 	color: white;
 	height: 248px;
 	width: 368px;
@@ -31,6 +32,10 @@ nav > div {
 	font-size: 26px;
 	letter-spacing: 5px;
 }
+.box:hover {
+	transform: scale(1.1);
+	transition: 0.5s ease-in-out;
+}
 
 .boxes {
 	font-family: "Oswald", sans-serif;
@@ -38,7 +43,15 @@ nav > div {
 	padding-bottom: 30px;
 	margin-top: -200px;
 }
-
+.message {
+	/* font-family: "Montserrat", sans-serif; */
+	background: rgb(255, 255, 255);
+	background: linear-gradient(
+		90deg,
+		rgba(255, 255, 255, 0.8911939775910365) 48%,
+		rgba(255, 255, 255, 1) 100%
+	);
+}
 .hr {
 	border: 1px solid rgba(0, 0, 255, 0.089);
 	width: 100wh;
