--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=latin-ext,vietnamese");
 
-nav > div {
+nav>div {
 	font-family: "Oswald", sans-serif;
 	font-weight: bold;
 	font-size: 18px;
@@ -32,6 +32,7 @@ nav > div {
 	font-size: 26px;
 	letter-spacing: 5px;
 }
+
 .box:hover {
 	transform: scale(1.1);
 	transition: 0.5s ease-in-out;
@@ -43,9 +44,11 @@ nav > div {
 	padding-bottom: 30px;
 	margin-top: -200px;
 }
+
 .message {
 	/* font-family: "Montserrat", sans-serif; */
 }
+
 .hr {
 	border: 1px solid rgba(0, 0, 255, 0.089);
 	width: 100wh;
@@ -61,7 +64,7 @@ nav > div {
 	box-shadow: 3px 6px 8px rgba(0, 0, 0, 0.288);
 }
 
-.media > img {
+.media>img {
 	padding-bottom: 5px;
 	width: 20%;
 	height: 20%;
@@ -79,7 +82,7 @@ nav > div {
 	box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.719);
 }
 
-.activities > p {
+.activities>p {
 	border-top: 1px solid rgb(16, 16, 151);
 	padding-top: 30px;
 	font-size: 20px;
@@ -117,17 +120,29 @@ nav > div {
 	padding-left: 20px;
 }
 
-.footer > li {
+.footer>li {
 	font-size: 15;
 }
+
 .footer-image {
 	height: 25%;
 	width: 25%;
 }
 
+.photo-gallery .photos {
+	padding-bottom: 20px;
+}
+
+.photo-gallery .item {
+	padding-bottom: 30px;
+
+}
+
+
 ul {
 	list-style: none;
 }
+
 footer {
 	background: #16222a;
 	background: -webkit-linear-gradient(59deg, #3a6073, #16222a);
@@ -241,10 +256,12 @@ ul.social-network li {
 .social-network a {
 	background-color: #f9f9f9;
 }
+
 @media screen and (max-width: 600px) {
-	.overlay > img {
+	.overlay>img {
 		width: 40%;
 	}
+
 	.box {
 		width: 100%;
 		height: 15vh;
@@ -260,10 +277,12 @@ ul.social-network li {
 		font-size: 18px;
 	}
 }
+
 @media screen and (max-width: 480px) {
 	.boxes {
 		margin-top: -30px;
 	}
+
 	.overlay {
 		font-size: 15px;
 	}
