--- a/style.css
+++ b/style.css
@@ -1,179 +1,193 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=latin-ext,vietnamese");
 
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
 nav > div {
-	font-family: "Oswald", sans-serif;
-	font-weight: bold;
-	font-size: 18px;
-	letter-spacing: 2px;
+  font-family: "Oswald", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  letter-spacing: 2px;
 }
 
 .overlay {
-	width: 100%;
-	height: 100%;
-	background: rgba(0, 0, 0, 0.623);
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.623);
 }
 
 .hero {
-	background-image: url("https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
-	background-size: cover;
-	background-position: center;
-	width: 100wh;
-	height: 80vh;
+  background-image: url("https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 80vh;
 }
 
 .box {
-	color: white;
-	height: 248px;
-	width: 368px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-weight: bold;
-	font-size: 26px;
-	letter-spacing: 5px;
+  color: white;
+  height: 248px;
+  width: 368px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 26px;
+  letter-spacing: 5px;
 }
 
 .box:hover {
-	transform: scale(1.1);
-	transition: 0.5s ease-in-out;
+  transform: scale(1.1);
+  transition: 0.5s ease-in-out;
 }
 
 .boxes {
-	font-family: "Oswald", sans-serif;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	margin-top: -150px;
+  font-family: "Oswald", sans-serif;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-top: -150px;
 }
 
 .message {
-	/* font-family: "Montserrat", sans-serif; */
+  /* font-family: "Montserrat", sans-serif; */
 }
 
 .hr {
-	border: 1px solid rgba(0, 0, 255, 0.089);
-	width: 100wh;
+  border: 1px solid rgba(0, 0, 255, 0.089);
+  width: 100wh;
 }
 
 .news-title {
-	font-family: "Oswald", sans-serif;
-	/* border: 1px solid black;
-	border-radius: 25px; */
+  font-family: "Oswald", sans-serif;
+  /* border: 1px solid black;
+    border-radius: 25px; */
 }
 
 .news {
-	/* box-shadow: 3px 6px 8px rgba(0, 0, 0, 0.288); */
+  /* box-shadow: 3px 6px 8px rgba(0, 0, 0, 0.288); */
 }
 
 .media > img {
-	padding-bottom: 5px;
-	width: 20%;
-	height: 20%;
+  padding-bottom: 5px;
+  width: 20%;
+  height: 20%;
 }
 
 .activity {
-	background: #f6f3f3;
-	box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.288);
+  background: #f6f3f3;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.288);
 }
 
 .activities {
-	border: 1px solid rgba(0, 0, 0, 0.418);
-	border-radius: 10px;
-	padding: 20px;
-	box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.719);
-	font-family: "Montserrat", sans-serif;
+  border: 1px solid rgba(0, 0, 0, 0.418);
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.719);
+  font-family: "Montserrat", sans-serif;
+  flex: 1;
 }
-
+.img-same {
+  height: 400px;
+  width: 100%;
+}
+.img-same img {
+  height: 100%;
+  width: 100%;
+}
 .activities > p {
-	border-top: 1px solid rgb(16, 16, 151);
-	padding-top: 10px;
-	font-size: 23px;
-	color: rgb(16, 16, 151);
-	font-weight: 300;
-	text-decoration: none;
-	/* font-family: "Open Sans", "Helvetica Neue", sans-serif; */
+  border-top: 1px solid rgb(16, 16, 151);
+  padding-top: 10px;
+  font-size: 23px;
+  color: rgb(16, 16, 151);
+  font-weight: 300;
+  text-decoration: none;
+  /* font-family: "Open Sans", "Helvetica Neue", sans-serif; */
 }
 
 .activity-date {
-	padding-top: 10px;
-	padding-left: 0px;
+  padding-top: 10px;
+  padding-left: 0px;
 }
 
 .activity-date-month,
 .activity-date-day {
-	letter-spacing: 5px;
-	line-height: 1px;
+  letter-spacing: 5px;
+  line-height: 1px;
 }
 
 .activity-date-day {
-	letter-spacing: 5px;
-	line-height: 1px;
+  letter-spacing: 5px;
+  line-height: 1px;
 }
 
 .activity-detail-name {
-	font-size: 21px;
-	font-weight: bold;
+  font-size: 21px;
+  font-weight: bold;
 }
 
 .footer {
-	font-family: "Oswald", sans-serif;
-	margin-left: 30px;
-	margin-right: 30px;
-	padding-right: 20px;
-	padding-left: 20px;
+  font-family: "Oswald", sans-serif;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .footer > li {
-	font-size: 15;
+  font-size: 15;
 }
 
 .footer-image {
-	height: 25%;
-	width: 25%;
+  height: 25%;
+  width: 25%;
 }
 
 .photo-gallery .photos {
-	padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .photo-gallery .item {
-	padding-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 footer {
-	background: #16222a;
-	background: -webkit-linear-gradient(59deg, #3a6073, #16222a);
-	background: linear-gradient(59deg, #3a6073, #16222a);
-	/* font-family: "Montserrat", sans-serif; */
-	font-family: "Oswald", sans-serif;
+  background: #16222a;
+  background: -webkit-linear-gradient(59deg, #3a6073, #16222a);
+  background: linear-gradient(59deg, #3a6073, #16222a);
+  /* font-family: "Montserrat", sans-serif; */
+  font-family: "Oswald", sans-serif;
 
-	color: white;
-	margin-top: 100px;
+  color: white;
+  margin-top: 100px;
 }
 
 footer a {
-	color: #fff;
-	font-size: 14px;
-	transition-duration: 0.2s;
+  color: #fff;
+  font-size: 14px;
+  transition-duration: 0.2s;
 }
 
 footer a:hover {
-	color: #fa944b;
-	text-decoration: none;
+  color: #fa944b;
+  text-decoration: none;
 }
 
 .copy {
-	font-size: 12px;
-	padding: 10px;
-	border-top: 1px solid #ffffff;
+  font-size: 12px;
+  padding: 10px;
+  border-top: 1px solid #ffffff;
 }
 
 .footer-middle {
-	padding-top: 2em;
-	color: white;
+  padding-top: 2em;
+  color: white;
 }
 
 /*SOCİAL İCONS*/
@@ -181,119 +195,119 @@ footer a:hover {
 /* footer social icons */
 
 ul.social-network {
-	list-style: none;
-	display: inline;
-	margin-left: 0 !important;
-	padding: 0;
+  list-style: none;
+  display: inline;
+  margin-left: 0 !important;
+  padding: 0;
 }
 
 ul.social-network li {
-	display: inline;
-	margin: 0 5px;
+  display: inline;
+  margin: 0 5px;
 }
 
 /* footer social icons */
 
 .social-network a.icoFacebook:hover {
-	background-color: #3b5998;
+  background-color: #3b5998;
 }
 
 .social-network a.icoLinkedin:hover {
-	background-color: #007bb7;
+  background-color: #007bb7;
 }
 
 .social-network a.icoFacebook:hover i,
 .social-network a.icoLinkedin:hover i {
-	color: #fff;
+  color: #fff;
 }
 
 .social-network a.socialIcon:hover,
 .socialHoverClass {
-	color: #44bcdd;
+  color: #44bcdd;
 }
 
 .social-circle li a {
-	display: inline-block;
-	position: relative;
-	margin: 0 auto 0 auto;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
-	text-align: center;
-	width: 30px;
-	height: 30px;
-	font-size: 15px;
+  display: inline-block;
+  position: relative;
+  margin: 0 auto 0 auto;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  font-size: 15px;
 }
 
 .social-circle li i {
-	margin: 0;
-	line-height: 30px;
-	text-align: center;
+  margin: 0;
+  line-height: 30px;
+  text-align: center;
 }
 
 .social-circle li a:hover i,
 .triggeredHover {
-	-moz-transform: rotate(360deg);
-	-webkit-transform: rotate(360deg);
-	-ms--transform: rotate(360deg);
-	transform: rotate(360deg);
-	-webkit-transition: all 0.2s;
-	-moz-transition: all 0.2s;
-	-o-transition: all 0.2s;
-	-ms-transition: all 0.2s;
-	transition: all 0.2s;
+  -moz-transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -ms--transform: rotate(360deg);
+  transform: rotate(360deg);
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .social-circle i {
-	color: #595959;
-	-webkit-transition: all 0.8s;
-	-moz-transition: all 0.8s;
-	-o-transition: all 0.8s;
-	-ms-transition: all 0.8s;
-	transition: all 0.8s;
+  color: #595959;
+  -webkit-transition: all 0.8s;
+  -moz-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  -ms-transition: all 0.8s;
+  transition: all 0.8s;
 }
 
 .social-network a {
-	background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
 
 @media screen and (max-width: 600px) {
-	.overlay > img {
-		width: 40%;
-	}
+  .overlay > img {
+    width: 40%;
+  }
 
-	.box {
-		width: 100%;
-		height: 15vh;
-		font-size: 22px;
-	}
+  .box {
+    width: 100%;
+    height: 15vh;
+    font-size: 22px;
+  }
 
-	.boxes {
-		margin-top: -50px;
-		/* margin-bottom: 500px; */
-	}
+  .boxes {
+    margin-top: -50px;
+    /* margin-bottom: 500px; */
+  }
 
-	.activity-detail-name {
-		font-size: 18px;
-	}
+  .activity-detail-name {
+    font-size: 18px;
+  }
 }
 
 @media screen and (max-width: 480px) {
-	.boxes {
-		margin-top: -30px;
-	}
+  .boxes {
+    margin-top: -30px;
+  }
 
-	.overlay {
-		font-size: 15px;
-	}
+  .overlay {
+    font-size: 15px;
+  }
 }
 
 /* about page */
 
 .hero-about {
-	background-image: url("https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
-	background-size: cover;
-	background-position: center;
-	width: 100wh;
-	height: 35vh;
+  background-image: url("https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-size: cover;
+  background-position: center;
+  width: 100wh;
+  height: 35vh;
 }
